--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -1,4 +1,6 @@
 <DOCTYPE HTML>
 <html>
 	<script src="Basic_JavaScript_1.js"></script>
+	<p><font color="pink"> Changing font color using color name. </font></p>
+	<p><font color="40FF10"> Changing font color using hex code. </font></p>
 </html>
