--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -1,6 +1,13 @@
 <DOCTYPE HTML>
 <html>
 	<script src="Basic_JavaScript_1.js"></script>
-	<p><font color="pink"> Changing font color using color name. </font></p>
-	<p><font color="40FF10"> Changing font color using hex code. </font></p>
+	
+	<p><font color="FF4500" face="Impact" size="6"> Here I will display styling with HTML.</font></p>
+
+	<p><font color="magenta" face="Ariel" size="4"> Changing font color using color name. Changing style to "Ariel"
+	and font size to 4.</font></p>
+	
+	<p><font color="40FF10" face="Verdana" size="2"> Changing font color using hex code. Changing style to "Verdana"
+	and font size to 2.</font></p>
+
 </html>
