--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -9,5 +9,6 @@
 	
 	<p><font color="40FF10" face="Verdana" size="2"><b> Changing font color using hex code. </b> Changing style to "Verdana"
 	and font size to 2.</font></p>
-
+	
+	<img src="Images/He.png" alt="Hex Color Chart">
 </html>
