--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -2,29 +2,18 @@
 <html>	
 	<head>
 		<title>HTML 3</title>
+		<link rel="stylesheet" type="text/css" href="Basic_CSS_1.css">
 	</head>
-	<body>
-		<style>
-		h3 {color: rgb(255, 0, 0)}
-		</style>
-		<h3>Font Color</h3>
+	<body
 		
 		<h4>Here we're going to style some text!</h4>
 		
 		<div style="color: rgb(187, 247, 0)">
-			<p>Font color using rgb code.</p>
-			<p>All text in this divided section will be this color.</p>
+			<h1>Font color using rgb code.</h1>
 		</div>
 		
-		<p>This text won't be.</p>
-		
-		<style>
-		h5	{
-			color: cyan;
-			text-align: center;
-		}
-		</style>
-		<h5>These headers will now be cyan.</h5>
+		<p>This text was styled by CSS</p>
+		<p>... and so was this text.</p>
 		
 	</body>
 </html>
