Lists, Tables, CSS
Styled a table HTML_tables.html using  linked stylsheet CSS_Tables.css. Created an ordered list and unordered list HTML_Lists.html.

--- a/Basic_HTML_and_CSS/HTML_Tables.html
+++ b/Basic_HTML_and_CSS/HTML_Tables.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<body>
+	<link rel="stylesheet" type="text/css" href="CSS_Tables.css">
 		<h1>Krystle's Dogs</h1>
 		<table style="width: 100%">
 			<tr>
