--- a/Basic_HTML_and_CSS/Basic_HTML_5.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_5.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+	<link rel="stylesheet" type="text/css" href="Basic_CSS_2.css">
 	<body>
-		<link rel="stylesheet" type="text/css" href="Basic_CSS_2.css">
+		<h1>CSS Text-Shadow Property</h1>
 		<p>This is a paragraph element in Basic_HTML_5.html.</p> 
+		<p>Learning how to use entity names &amp; entity numbers.</p>
 	</body>
 </html>
