Basic build of Project.html
Typed out the basic build of Project.html. Updated Basic_HTML_3.html to link a page in a new tab and to use the <em> tag.

--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -12,6 +12,8 @@
 			<h1>Font color using rgb code.</h1>
 		</div>
 		
+		<h3><span style="color:black;"><em>I've linked an RGB color chart. You should check it out!</em></span></h3>
+		<a href="https://www.rapidtables.com/web/color/RGB_Color.html" target="new">RGB Color Chart</a>
 		<p>This text was styled by CSS</p>
 		<p>... and so was this text.</p>
 		
