--- a/Project/index.html
+++ b/Project/index.html
@@ -10,16 +10,16 @@
 		<div>
 			<div>
 				<ul>
-					<li>HOME</li>
-					<li>GALLERY</li>
-					<li>RESERVATIONS</li>
+					<a href="#home" id="link"><li>HOME</li></a>
+					<a href="#gallery" id="link"><li>GALLERY</li></a>
+					<a href="#reservations" id="link"><li>RESERVATIONS</li></a>
 				</ul>
 			</div>
 		</div>
 		<!-- END OF NAV -->
 		
 		<!-- HOME -->
-		<div>
+		<div id="home">
 			<div>
 				<div> 
 					<span>Crystal Palace</span>
@@ -30,7 +30,7 @@
 		
 		<!-- GALLERY -->
 		<section>
-			<div>
+			<div id="gallery">
 				<h1>Gallery</h1>
 				<div>
 				
@@ -52,7 +52,7 @@
 	
 		<!-- RSVP -->
 		<section>
-			<div>
+			<div id="contact">
 				<div>
 					<h1>Reservations</h1>
 					<div>
