--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -43,8 +43,8 @@
       </div>
       
 
-      <div id="about">
-        <div class="row">
+      <div class="container">
+        <div class="row" id="about">
           <div class="col">
             <img class="img-fluid" src="./img/img_4.jpg">
           </div>
